# grpc.js

./: BUILD  BUILD.bazel  Makefile  README.md  WORKSPACE
bzl/: BUILD  rules.bzl
js/grpc/: BUILD  BUILD.bazel  api.js  endpoint.js  observer.js  options.js  rejection.js  status.js  transport.js
js/grpc/stream/: BUILD  observer.js  rejection.js
js/grpc/stream/observer/: BUILD  BUILD.bazel  callresolver.js  eventtype.js  rejection.js  streamingcallobserver.js  streamingcallresolver.js  unarycallobserver.js  unarycallresolver.js
js/grpc/transport/: BUILD  BUILD.bazel  base_observer.js  fetch.js  loopback.js  websocket.js  xhr.js  xhrio.js
js/grpc/transport/chunk/: BUILD  BUILD.bazel  object.js  parser.js  parser_test.js
js/grpc/transport/fetch/: observer.js
js/grpc/transport/websocket/: observer.js
js/grpc/transport/xhr/: factory.js  observer.js  observer_test.js  pool.js
js/grpc/transport/xhrio/: factory.js  observer.js
js/pb/: BUILD
language/grpc_js/: grpc_js_info_provider_test.golden.1.prototext
language/grpc_js/grpc_js_grpc_compile/: BUILD.bazel  grpc_js_grpc_compile_info_provider_test.golden.1.prototext
language/grpc_js/grpc_js_grpc_library/: BUILD.bazel  grpc_js_grpc_library_info_provider_test.golden.1.prototext
protoc-gen-grpc-js/: BUILD  BUILD.bazel  main.go  protoc-gen-grpc-js.cc
protoc-gen-grpc-js/generator/: generator.go
rules/: grpc_js_grpc_compile.bzl  grpc_js_grpc_compile_deps.bzl  grpc_js_grpc_library_deps.bzl
rules/proto/: BUILD.bazel  grpc_js_info_provider_test.golden.1.prototext
rules/proto/grpc_js_grpc_compile/: BUILD.bazel  grpc_js_grpc_compile_info_provider_test.golden.1.prototext
rules/proto/grpc_js_grpc_library/: BUILD.bazel  grpc_js_grpc_library_info_provider_test.golden.1.prototext
rules/rules_proto/grpc_js_grpc_compile/: BUILD.bazel
tools/: regenerate_golden_files.sh
