load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@build_stack_rules_proto//rules:proto_plugin.bzl", "proto_plugin")

package(default_visibility = ["//visibility:public"])

proto_plugin(
    name = "grpc_js",
    exclusions = ["google/protobuf"],  # TODO(pcj): is this needed?
    outputs = ["{protopath}.grpc.js"],
    tool = ":protoc-gen-grpc-js",
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "protoc-gen-grpc-js",
    srcs = [
        "protoc-gen-grpc-js.cc",
    ],
    deps = [
        "@com_google_protobuf//:protoc_lib",
    ],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
