load(
    "@io_bazel_rules_closure//closure:defs.bzl",
    "closure_js_library",
)

package(default_visibility = ["//visibility:public"])

closure_js_library(
    name = "grpc",
    srcs = [
        "endpoint.js",
        "observer.js",
        "rejection.js",
        "status.js",
        "transport.js",
    ],
    deps = [
        "@io_bazel_rules_closure//closure/protobuf:jspb",
    ],
)

closure_js_library(
    name = "api",
    srcs = [
        "api.js",
    ],
    deps = [
        ":grpc",
        ":options",
        "//js/grpc/transport:fetch",
        "//js/grpc/transport:websocket",
        "//js/grpc/transport:xhr",
        "@com_google_javascript_closure_library//closure/goog/labs/useragent:browser",
    ],
)

closure_js_library(
    name = "options",
    srcs = [
        "options.js",
    ],
    deps = [
        ":grpc",
    ],
)
