load("@build_stack_rules_proto//rules/proto:proto_rule_info_provider_test.bzl", "proto_rule_info_provider_test")
load("@build_stack_rules_proto//rules/proto:proto_rule_test.bzl", "proto_rule_test")
load("@build_stack_rules_proto//rules/proto:proto_rule_bazel_test.bzl", "proto_rule_bazel_test")
load("@build_stack_rules_proto//rules/proto:proto_rule.bzl", "proto_rule")

proto_rule(
    name = "grpc_js_grpc_library",
    build_example_tmpl = "@build_stack_rules_proto//core/grpc:BUILD.tmpl",
    implementation_tmpl = "grpc_js_grpc_library.bzl.tmpl",
    kind = "grpc",
    language = "//rules/proto:grpc_js",
    package = "rules",
    plugins = [
        "@build_stack_rules_proto//plugins/closure/proto",
        "//protoc-gen-grpc-js:grpc_js",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//rules/proto:com_github_stackb_grpc_js",
        "@build_stack_rules_proto//core:com_google_protobuf",
        "@build_stack_rules_proto//rules/proto/closure:io_bazel_rules_closure",
    ],
)

proto_rule_info_provider_test(
    name = "grpc_js_grpc_library_info_provider_test",
    srcs = ["grpc_js_grpc_library_info_provider_test.golden.1.prototext"],
    deps = [":grpc_js_grpc_library"],
)

proto_rule_test(
    name = "grpc_js_grpc_library_rule_test",
    srcs = [
        "//rules:grpc_js_grpc_library.bzl",
        "//rules:grpc_js_grpc_library_deps.bzl",
    ],
    package = "rules",
    deps = [":grpc_js_grpc_library"],
)

proto_rule_bazel_test(
    name = "grpc_js_grpc_library_rule_bazel_test",
    tags = ["exclusive"],
    deps = ["grpc_js_grpc_library"],
)
