load(
    "@io_bazel_rules_closure//closure:defs.bzl",
    "closure_js_library",
)

package(default_visibility = ["//visibility:public"])

closure_js_library(
    name = "call",
    srcs = [
        "eventtype.js",
        "streamingcallobserver.js",
        "unarycallobserver.js",
    ],
    suppress = [
        "JSC_UNKNOWN_EXPR_TYPE",
    ],
    deps = [
        "//js/grpc",
        "@com_google_javascript_closure_library//closure/goog/events",
        "@com_google_javascript_closure_library//closure/goog/promise:resolver",
    ],
)
