load(
    "@io_bazel_rules_closure//closure:defs.bzl",
    "closure_js_library",
    "closure_js_test",
)

package(default_visibility = ["//visibility:public"])

closure_js_library(
    name = "chunk",
    srcs = [
        "object.js",
        "parser.js",
    ],
    deps = [
        "@com_google_javascript_closure_library//closure/goog/asserts",
        "@com_google_javascript_closure_library//closure/goog/crypt",
        "@com_google_javascript_closure_library//closure/goog/string",
    ],
)

closure_js_test(
    name = "parser_test",
    size = "small",
    srcs = [
        "parser_test.js",
    ],
    entry_points = ["goog:grpc.transport.chunk.ParserTest"],
    deps = [
        ":chunk",
        "@com_google_javascript_closure_library//closure/goog:testing",
    ],
)
